--- a/Backjoon/Backjoon/Backjoon.vcxproj.filters
+++ b/Backjoon/Backjoon/Backjoon.vcxproj.filters
@@ -21,5 +21,11 @@
     <ClCompile Include="1004 어린왕자.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1005 ACM Craft.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1006 습격자 초라기.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
