--- a/Backjoon/Backjoon/Backjoon.vcxproj.filters
+++ b/Backjoon/Backjoon/Backjoon.vcxproj.filters
@@ -87,5 +87,14 @@
     <ClCompile Include="1026 보물.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1000 A+B.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1007 벡터 매칭.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="combination.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
