--- a/Backjoon/Backjoon/Backjoon.vcxproj.filters
+++ b/Backjoon/Backjoon/Backjoon.vcxproj.filters
@@ -96,5 +96,14 @@
     <ClCompile Include="combination.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1014 컨닝.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="11375 열혈강호.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1022 소용돌이 예쁘게 출력하기.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
